--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,9 @@
     "landing-page-e2e": {
       "tags": [],
       "implicitDependencies": ["landing-page"]
+    },
+    "shared-components": {
+      "tags": []
     }
   }
 }
