--- a/package.json
+++ b/package.json
@@ -37,25 +37,26 @@
     "@zeit/next-stylus": "1.0.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.0.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.18.2",
-    "@nrwl/next": "9.0.0",
-    "@nrwl/jest": "9.0.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "^3.8.2",
     "@nrwl/cypress": "9.0.0",
-    "@nrwl/web": "9.0.0",
+    "@nrwl/jest": "9.0.0",
+    "@nrwl/next": "^9.0.0",
     "@nrwl/react": "9.0.0",
+    "@nrwl/web": "9.0.0",
+    "@nrwl/workspace": "9.0.0",
+    "@testing-library/react": "9.4.0",
+    "@types/jest": "24.0.9",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0"
+    "cypress": "^3.8.2",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "node-sass": "^4.13.1",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.7.4"
   }
 }
