--- a/libs/shared-components/tsconfig.lib.json
+++ b/libs/shared-components/tsconfig.lib.json
@@ -4,6 +4,22 @@
     "outDir": "../../dist/out-tsc",
     "types": []
   },
-  "exclude": ["**/*.spec.ts", "**/*.spec.tsx"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.stories.ts",
+    "**/*.stories.js",
+    "**/*.stories.ts",
+    "**/*.stories.js",
+    "**/*.stories.ts",
+    "**/*.stories.js",
+    "**/*.stories.ts",
+    "**/*.stories.js"
+  ],
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
