--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "@nrwl/jest": "9.0.0",
     "@nrwl/next": "^9.0.0",
     "@nrwl/react": "9.0.0",
+    "@nrwl/storybook": "^9.0.0",
     "@nrwl/web": "9.0.0",
     "@nrwl/workspace": "9.0.0",
+    "@storybook/addon-knobs": "^5.3.13",
+    "@storybook/react": "^5.3.13",
     "@testing-library/react": "9.4.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
