--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
   },
   "private": true,
   "dependencies": {
-    "document-register-element": "1.13.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "next": "9.1.5",
+    "@material-ui/core": "^4.9.5",
     "@zeit/next-css": "1.0.1",
-    "@zeit/next-sass": "1.0.1",
     "@zeit/next-less": "1.0.1",
-    "@zeit/next-stylus": "1.0.1"
+    "@zeit/next-sass": "1.0.1",
+    "@zeit/next-stylus": "1.0.1",
+    "document-register-element": "1.13.1",
+    "next": "^9.2.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@nrwl/cypress": "9.0.0",
@@ -51,6 +53,7 @@
     "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "babel-plugin-styled-components": "^1.10.7",
     "cypress": "^3.8.2",
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
@@ -60,6 +63,7 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.7.4"
+    "typescript": "~3.7.4",
+    "@types/styled-components": "4.4.2"
   }
 }
